Add html text and basic border for description text

--- a/index.html
+++ b/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html lang="EN-US">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width" />
-        <title>Pannkakor</title>
-        <link href="styles/style.css" rel="stylesheet" />
-    </head>
-    <body>
-        <p>Recipe coming soon</p>
-    </body>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Pannkakor</title>
+    <link href="styles/style.css" rel="stylesheet" />
+</head>
+
+<body>
+    <h1>Enkelt recept på pannkakor</h1>
+
+    <p id="description">Gör traditionella tunna pannkakor med detta enkla och goda pannkaksrecept.</p>
+
+    <h2>Ingredienser</h2>
+
+    <p>För 4 portioner</p>
+
+    <ul>
+        <li>2 1/2 dl vetemjöl</li>
+        <li>1/2 tsk salt</li>
+        <li>6 dl mjölk</li>
+        <li>3 ägg</li>
+        <li>smör (till stekning)</li>
+        <li>sylt, bär eller frukt till servering</li>
+    </ul>
+
+    <h2>Så här gör du</h2>
+
+    <ol>
+        <li>Blanda mjöl och socker i en bunke.</li>
+        <li>Vispa i hälften av mjölken och vispa till en slät smet.</li>
+        <li>Vispa i resten av mjölken och äggen.</li>
+        <li>Låt smeten vila ca 10 minuter.</li>
+        <li>Stek tunna pannkakor i lite smör, för varje pannkaka, i en stek- eller pannkakspanna.</li>
+        <li>Servera med sylt, bär eller frukt.</li>
+    </ol>
+
+    <h2>Serveringsförslag:</h2>
+
+</body>
+
 </html>
