Add and style images, improve semantic layout of html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="EN-US">
+<html lang="sv-SE">
 
 <head>
     <meta charset="UTF-8" />
@@ -13,35 +13,46 @@
 </head>
 
 <body>
-    <h1>Enkelt recept på pannkakor</h1>
+    <header>
+        <img id="header-image" src="images/pannkakor-recept.png" alt="Pannkakor med frukt och grädde" />
+    </header>
 
-    <p id="description">Gör traditionella tunna pannkakor med detta enkla och goda pannkaksrecept.</p>
+    <main>
+        <h1>Enkelt recept på pannkakor</h1>
 
-    <h2>Ingredienser</h2>
+        <p id="description">Gör traditionella tunna pannkakor med detta enkla och goda pannkaksrecept.</p>
 
-    <p>För 4 portioner</p>
+        <h2>Ingredienser</h2>
 
-    <ul>
-        <li>2 1/2 dl vetemjöl</li>
-        <li>1/2 tsk salt</li>
-        <li>6 dl mjölk</li>
-        <li>3 ägg</li>
-        <li>smör (till stekning)</li>
-        <li>sylt, bär eller frukt till servering</li>
-    </ul>
+        <p>För 4 portioner</p>
 
-    <h2>Så här gör du</h2>
+        <ul>
+            <li>2 1/2 dl vetemjöl</li>
+            <li>1/2 tsk salt</li>
+            <li>6 dl mjölk</li>
+            <li>3 ägg</li>
+            <li>smör (till stekning)</li>
+            <li>sylt, bär eller frukt till servering</li>
+        </ul>
 
-    <ol>
-        <li>Blanda mjöl och socker i en bunke.</li>
-        <li>Vispa i hälften av mjölken och vispa till en slät smet.</li>
-        <li>Vispa i resten av mjölken och äggen.</li>
-        <li>Låt smeten vila ca 10 minuter.</li>
-        <li>Stek tunna pannkakor i lite smör, för varje pannkaka, i en stek- eller pannkakspanna.</li>
-        <li>Servera med sylt, bär eller frukt.</li>
-    </ol>
+        <h2>Så här gör du</h2>
 
-    <h2>Serveringsförslag:</h2>
+        <ol>
+            <li>Blanda mjöl och socker i en bunke.</li>
+            <li>Vispa i hälften av mjölken och vispa till en slät smet.</li>
+            <li>Vispa i resten av mjölken och äggen.</li>
+            <li>Låt smeten vila ca 10 minuter.</li>
+            <li>Stek tunna pannkakor i lite smör, för varje pannkaka, i en stek- eller pannkakspanna.</li>
+            <li>Servera med sylt, bär eller frukt.</li>
+        </ol>
+
+        <h2>Serveringsförslag:</h2>
+
+        <section>
+            <img class="suggestion-picture" src="images/pannkaka-servering1.png" alt="Pannkakor med seperat grädde" />
+            <img class="suggestion-picture" src="images/pannkaka-servering2.png" alt="Pannkakor med seperat grädde" />
+        </section>
+    </main>
 
 </body>
 
