Add responsive design and optimize images

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <img id="header-image" src="images/pannkakor-recept.png" alt="Pannkakor med frukt och grädde" />
+        <img id="header-image" src="images/pannkakor-recept.jpg" alt="Pannkakor med frukt och grädde" />
     </header>
 
     <main>
@@ -49,8 +49,8 @@
         <h2>Serveringsförslag:</h2>
 
         <section>
-            <img class="suggestion-picture" src="images/pannkaka-servering1.png" alt="Pannkakor med seperat grädde" />
-            <img class="suggestion-picture" src="images/pannkaka-servering2.png" alt="Pannkakor med seperat grädde" />
+            <img class="suggestion-picture" src="images/pannkaka-servering1.jpg" alt="Pannkakor med seperat grädde" />
+            <img class="suggestion-picture" src="images/pannkaka-servering2.jpg" alt="Pannkakor med olika pålägg" />
         </section>
     </main>
 
