Move index to pancake, create new index

--- a/index.html
+++ b/index.html
@@ -1,138 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="sv-SE">
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>Pannkakor</title>
-    <link href="styles/style.css" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
-        rel="stylesheet">
-</head>
-
+<head></head>
 <body>
-    <header id="site-header">
-        <div class="navbar">
-            <a class="nav-link" href="#hem">Startsida</a>
-            <a class="nav-link" href="#recept">Recept</a>
-            <a class="nav-link" href="#kontakt">Kontakta oss</a>
-        </div>
-    </header>
-
-    <main>
-        <header id="main-header">
-            <img id="header-image" src="images/pannkakor-recept.jpg" alt="Pannkakor med frukt och grädde" />
-        </header>
-
-        <div id="main-body-container">
-            <section id="introduction-section">
-                <h1>Enkelt recept på pannkakor</h1>
-
-                <p id="description">Gör traditionella tunna pannkakor med detta enkla och goda pannkaksrecept.</p>
-            </section>
-
-            <section class="main-section">
-                <h2>Ingredienser</h2>
-
-                <p>För 4 portioner</p>
-
-                <ul class="main-section">
-                    <li>2 1/2 dl vetemjöl</li>
-                    <li>1/2 tsk salt</li>
-                    <li>6 dl mjölk</li>
-                    <li>3 ägg</li>
-                    <li>smör (till stekning)</li>
-                    <li>sylt, bär eller frukt till servering</li>
-                </ul>
-            </section>
-
-            <section id="instructions">
-                <h2>Så här gör du</h2>
-
-                <ol id="instruction-list">
-                    <li>Blanda mjöl och socker i en bunke.</li>
-                    <li>Vispa i hälften av mjölken och vispa till en slät smet.</li>
-                    <li>Vispa i resten av mjölken och äggen.</li>
-                    <li>Låt smeten vila ca 10 minuter.</li>
-                    <li>Stek tunna pannkakor i lite smör, för varje pannkaka, i en stek- eller pannkakspanna.</li>
-                    <li>Servera med sylt, bär eller frukt.</li>
-                </ol>
-            </section>
-
-            <section class="main-section:">
-                <h2>Näringsinnehåll:</h2>
-
-                <table class="nutrient-table">
-                    <caption>Näringsinnehåll per 100g</caption>
-                    <thead>
-                        <tr>
-                            <th scope="col">Näringsämne (enhet)</th>
-                            <th scope="col">Näring (per 100 gram)</th>
-                            <th scope="col">DRI</th>
-                            <th scope="col">% av DRI</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <th scope="row">Energi (kcal)</th>
-                            <td>135</td>
-                            <td>2000</td>
-                            <td>6,7</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">Energi (Kj)</th>
-                            <td>564</td>
-                            <td>8400</td>
-                            <td>6,7</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">Fett, totalt (g)</th>
-                            <td>6,3</td>
-                            <td>70,0</td>
-                            <td>9,0</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">Protein (g)</th>
-                            <td>5,5</td>
-                            <td>50,0</td>
-                            <td>11,1</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">Kolhydrater, tillgängliga (g)</th>
-                            <td>13,7</td>
-                            <td>260,0</td>
-                            <td>5,3</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">Fibrer (g)</th>
-                            <td>0,5</td>
-                            <td>-</td>
-                            <td>-</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">Vatten (g)</th>
-                            <td>72,7</td>
-                            <td>-</td>
-                            <td>-</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </section>
-
-            <article id="image-section">
-                <h2>Serveringsförslag:</h2>
-                <div id="picture-container">
-                    <img class="suggestion-picture" src="images/pannkaka-servering1.jpg"
-                        alt="Pannkakor med seperat grädde" />
-                    <img class="suggestion-picture" src="images/pannkaka-servering2.jpg"
-                        alt="Pannkakor med olika pålägg" />
-                </div>
-            </article>
-        </div>
-    </main>
-
+    <header></header>
+    <main></main>
+    <footer></footer>
 </body>
-
 </html>
