Add clean code and BEM

--- a/index.html
+++ b/index.html
@@ -2,10 +2,31 @@
 
 <html lang="sv-SE">
 
-<head></head>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Recept</title>
+    <link href="styles/style.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
+</head>
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <a class="skiplink" href="#content">Skip to content</a>
+    <header id="site-header">
+        <nav class="site-header__navbar">
+            <a class="nav-link" href="#LOGO">LOGO</a>
+
+            <div class="site-header__wrapper">
+                <a class="site-header__link" href="#recept">Recept</a>
+                <a class="site-header__link" href="#om-oss">Om oss</a>
+                <a class="site-header__link" href="#kontakt">Kontakt</a>
+            </div>
+
+            <a class="site-header__link" href="#logga-in">Logga in</a>
+        </nav>
+    </header>
+    <main role="content" id="content"></main>
 </body>
 </html>
