Add basic html structure for grid

--- a/index.html
+++ b/index.html
@@ -27,6 +27,21 @@
             <a class="site-header__link" href="#logga-in">Logga in</a>
         </nav>
     </header>
-    <main role="content" id="content"></main>
+    <main role="content" id="content">
+        <header class="main-header">
+            <figure>
+                <img class="main-header__image" src="images/pannkakor-recept.jpg" alt="Pannkakor med frukt och grädde" />
+            </figure>
+        </header>
+
+        <section class="main-body">
+            <h1 class="main-body__title">Popular recipes:</h2>
+            
+            <div class="main-body__container">
+                <section class="main-body__card">
+                </section>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
