Create and style grid

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
 </head>
+
 <body>
     <a class="skiplink" href="#content">Skip to content</a>
     <header id="site-header">
@@ -19,7 +20,7 @@
             <a class="nav-link" href="#LOGO">LOGO</a>
 
             <div class="site-header__wrapper">
-                <a class="site-header__link" href="#recept">Recept</a>
+                <a class="site-header__link" href="/">Recept</a>
                 <a class="site-header__link" href="#om-oss">Om oss</a>
                 <a class="site-header__link" href="#kontakt">Kontakt</a>
             </div>
@@ -30,18 +31,57 @@
     <main role="content" id="content">
         <header class="main-header">
             <figure>
-                <img class="main-header__image" src="images/pannkakor-recept.jpg" alt="Pannkakor med frukt och grädde" />
+                <img class="main-header__image" src="images/pannkakor-recept.jpg"
+                    alt="Pannkakor med frukt och grädde" />
             </figure>
         </header>
 
         <section class="main-body">
             <h1 class="main-body__title">Popular recipes:</h2>
-            
-            <div class="main-body__container">
-                <section class="main-body__card">
-                </section>
-            </div>
+
+                <div class="main-body__container">
+                    <section class="main-body__card">
+                        <h2 class="main-body__recipe">Pannkakor</h2>
+                        <p class="main-body__content">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce dolor erat, dapibus
+                            ullamcorper placerat non, consectetur ut justo. Nunc at mi porta, congue turpis sed,
+                            accumsan dui.
+                        </p>
+                        <a class="main-body__link" href="/pancake.html"><img class="main-body__image" src="images/pannkakor-recept.jpg"></a>
+                    </section>
+
+                    <section class="main-body__card">
+                        <h2 class="main-body__recipe">Citronglass</h2>
+                        <p class="main-body__content">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce dolor erat, dapibus
+                            ullamcorper placerat non, consectetur ut justo. Nunc at mi porta, congue turpis sed,
+                            accumsan dui.
+                        </p>
+                        <a class="main-body__link" href="/pancake.html"><img class="main-body__image" src="images/pannkakor-recept.jpg"></a>
+                    </section>
+
+                    <section class="main-body__card">
+                        <h2 class="main-body__recipe">Hallon-crepes</h2>
+                        <p class="main-body__content">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce dolor erat, dapibus
+                            ullamcorper placerat non, consectetur ut justo. Nunc at mi porta, congue turpis sed,
+                            accumsan dui.
+                        </p>
+                        <a class="main-body__link" href="/pancake.html"><img class="main-body__image" src="images/pannkakor-recept.jpg"></a>
+                    </section>
+
+                    <section class="main-body__card">
+                        <h2 class="main-body__recipe">Våfflor med Nutella</h2>
+                        <p class="main-body__content">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce dolor erat, dapibus
+                            ullamcorper placerat non, consectetur ut justo. Nunc at mi porta, congue turpis sed,
+                            accumsan dui.
+                        </p>
+                        <a class="main-body__link" href="/pancake.html"><img class="main-body__image" src="images/pannkakor-recept.jpg"></a>
+                    </section>
+                </div>
         </section>
     </main>
 </body>
+
 </html>
