--- a/pancake.html
+++ b/pancake.html
@@ -19,7 +19,7 @@
             <a class="nav-link" href="#LOGO">LOGO</a>
 
             <div class="site-header__wrapper">
-                <a class="site-header__link" href="#recept">Recept</a>
+                <a class="site-header__link" href="/">Recept</a>
                 <a class="site-header__link" href="#om-oss">Om oss</a>
                 <a class="site-header__link" href="#kontakt">Kontakt</a>
             </div>
