Add fully responsive subgrid

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <a class="skiplink" href="#content">Skip to content</a>
     <header id="site-header">
         <nav class="site-header__navbar">
-            <a class="nav-link" href="#LOGO">LOGO</a>
+            <a class="site-header__link" href="#LOGO">Receptia</a>
 
             <div class="site-header__wrapper">
                 <a class="site-header__link" href="/">Recept</a>
@@ -41,43 +41,67 @@
 
                 <div class="main-body__container">
                     <section class="main-body__card">
-                        <h2 class="main-body__recipe">Pannkakor</h2>
-                        <p class="main-body__content">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce dolor erat, dapibus
-                            ullamcorper placerat non, consectetur ut justo. Nunc at mi porta, congue turpis sed,
-                            accumsan dui.
-                        </p>
-                        <a class="main-body__link" href="/pancake.html"><img class="main-body__image" src="images/pannkakor-recept.jpg"></a>
+                        <a class="main-body__link--text" href="/pancake.html">
+                            <h2 class="main-body__recipe">Pannkakor</h2>
+                            <p class="main-body__content">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce dolor erat, dapibus
+                                ullamcorper placerat non, consectetur ut justo. Nunc at mi porta, congue turpis sed,
+                                accumsan dui.
+                            </p>
+                        </a>
+                        <a class="main-body__link--image" href="/pancake.html">
+                            <img class="main-body__image"
+                                alt="Pannkakor med bär och grädde på en tallrik, samt hallon och blåbär i var sin skål vid sidan om"
+                                src="images/pannkakor-gott.jpg">
+                        </a>
                     </section>
 
                     <section class="main-body__card">
-                        <h2 class="main-body__recipe">Citronglass</h2>
-                        <p class="main-body__content">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce dolor erat, dapibus
-                            ullamcorper placerat non, consectetur ut justo. Nunc at mi porta, congue turpis sed,
-                            accumsan dui.
-                        </p>
-                        <a class="main-body__link" href="/pancake.html"><img class="main-body__image" src="images/pannkakor-recept.jpg"></a>
+                        <a class="main-body__link--text" href="/pancake.html">
+                            <h2 class="main-body__recipe">Citronglass</h2>
+                            <p class="main-body__content">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce dolor erat, dapibus
+                                ullamcorper placerat non, consectetur ut justo. Nunc at mi porta, congue turpis sed,
+                                accumsan dui.
+                            </p>
+                        </a>
+                        <a class="main-body__link--image" href="/pancake.html">
+                            <img class="main-body__image"
+                                alt="En kula citronglass tillsammans med en skiva citron inuti en liten glasmugg, dekorerad på en tallrik"
+                                src="images/citrus-icecream.jpg">
+                        </a>
                     </section>
 
                     <section class="main-body__card">
-                        <h2 class="main-body__recipe">Hallon-crepes</h2>
-                        <p class="main-body__content">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce dolor erat, dapibus
-                            ullamcorper placerat non, consectetur ut justo. Nunc at mi porta, congue turpis sed,
-                            accumsan dui.
-                        </p>
-                        <a class="main-body__link" href="/pancake.html"><img class="main-body__image" src="images/pannkakor-recept.jpg"></a>
+                        <a class="main-body__link--text" href="/pancake.html">
+                            <h2 class="main-body__recipe">Hallon-crepes</h2>
+                            <p class="main-body__content">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce dolor erat, dapibus
+                                ullamcorper placerat non, consectetur ut justo. Nunc at mi porta, congue turpis sed,
+                                accumsan dui.
+                            </p>
+                        </a>
+                        <a class="main-body__link--image" href="/pancake.html">
+                            <img class="main-body__image"
+                                alt="Crepes fyllda med hallon och skogsbär, med banan och choklad vid sidan och toppat med mynta"
+                                src="images/hallon-crepes.jpg">
+                        </a>
                     </section>
 
                     <section class="main-body__card">
-                        <h2 class="main-body__recipe">Våfflor med Nutella</h2>
-                        <p class="main-body__content">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce dolor erat, dapibus
-                            ullamcorper placerat non, consectetur ut justo. Nunc at mi porta, congue turpis sed,
-                            accumsan dui.
-                        </p>
-                        <a class="main-body__link" href="/pancake.html"><img class="main-body__image" src="images/pannkakor-recept.jpg"></a>
+                        <a class="main-body__link--text" href="/pancake.html">
+                            <h2 class="main-body__recipe">Våfflor med Nutella</h2>
+                            <p class="main-body__content">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce dolor erat, dapibus
+                                ullamcorper placerat non, consectetur ut justo. Nunc at mi porta, congue turpis sed,
+                                accumsan dui.
+                            </p>
+                        </a>
+                        <a class="main-body__link--image" href="/pancake.html">
+                            <img class="main-body__image"
+                                alt="Flera lager av våfflor sprudlande med skivad jordgubb, små klickar grädde och mynta-blad dekorerade överallt på våfflorna"
+                                src="images/vaffla-nutella.jpg">
+                        </a>
                     </section>
                 </div>
         </section>
