--- a/pancake.html
+++ b/pancake.html
@@ -16,7 +16,7 @@
     <a class="skiplink" href="#content">Skip to content</a>
     <header id="site-header">
         <nav class="site-header__navbar">
-            <a class="nav-link" href="#LOGO">LOGO</a>
+            <a class="site-header__link" href="#LOGO">Receptia</a>
 
             <div class="site-header__wrapper">
                 <a class="site-header__link" href="/">Recept</a>
@@ -26,7 +26,6 @@
 
             <a class="site-header__link" href="#logga-in">Logga in</a>
         </nav>
-    </header>
 
     <main role="main" id="content">
         <header class="main-header">
