Implement clearer sectioning in css, improve custom variables

--- a/pancake.html
+++ b/pancake.html
@@ -47,12 +47,12 @@
                 <p class="main-body__text">För 4 portioner</p>
 
                 <ul class="main-body__list">
-                    <li class="item">2 1/2 dl vetemjöl</li>
-                    <li class="item">1/2 tsk salt</li>
-                    <li class="item">6 dl mjölk</li>
-                    <li class="item">3 ägg</li>
-                    <li class="item">smör (till stekning)</li>
-                    <li class="item">sylt, bär eller frukt till servering</li>
+                    <li class="main-body__item">2 1/2 dl vetemjöl</li>
+                    <li class="main-body__item">1/2 tsk salt</li>
+                    <li class="main-body__item">6 dl mjölk</li>
+                    <li class="main-body__item">3 ägg</li>
+                    <li class="main-body__item">smör (till stekning)</li>
+                    <li class="main-body__item">sylt, bär eller frukt till servering</li>
                 </ul>
             </section>
 
@@ -72,58 +72,58 @@
             <section class="main-body__category">
                 <h2>Näringsinnehåll:</h2>
 
-                <table class="nutrient-table">
-                    <caption>Näringsinnehåll per 100g</caption>
-                    <thead>
+                <table class="main-body__nutrients">
+                    <caption class="main-body__caption">Näringsinnehåll per 100g</caption>
+                    <thead class="main-body__nutrients--header">
                         <tr>
-                            <th scope="col">Näringsämne (enhet)</th>
-                            <th scope="col">Näring (per 100 gram)</th>
-                            <th scope="col">DRI</th>
-                            <th scope="col">% av DRI</th>
+                            <th class="main-body__nutrients--primary-cell" scope="col">Näringsämne (enhet)</th>
+                            <th class="main-body__nutrients--primary-cell" scope="col">Näring (per 100 gram)</th>
+                            <th class="main-body__nutrients--primary-cell" scope="col">DRI</th>
+                            <th class="main-body__nutrients--primary-cell" scope="col">% av DRI</th>
                         </tr>
                     </thead>
-                    <tbody>
+                    <tbody class="main-body__nutrients--body">
                         <tr>
-                            <th scope="row">Energi (kcal)</th>
-                            <td>135</td>
-                            <td>2000</td>
-                            <td>6,7</td>
+                            <th class="main-body__nutrients--primary-cell" scope="row">Energi (kcal)</th>
+                            <td class="main-body__nutrients--data-cell">135</td>
+                            <td class="main-body__nutrients--data-cell">2000</td> class="main-body__nutrients--data-cell"
+                            <td class="main-body__nutrients--data-cell">6,7</td>
                         </tr>
                         <tr>
-                            <th scope="row">Energi (Kj)</th>
-                            <td>564</td>
-                            <td>8400</td>
-                            <td>6,7</td>
+                            <th class="main-body__nutrients--primary-cell" scope="row">Energi (Kj)</th>
+                            <td class="main-body__nutrients--data-cell">564</td>
+                            <td class="main-body__nutrients--data-cell">8400</td>
+                            <td class="main-body__nutrients--data-cell">6,7</td>
                         </tr>
                         <tr>
-                            <th scope="row">Fett, totalt (g)</th>
-                            <td>6,3</td>
-                            <td>70,0</td>
-                            <td>9,0</td>
+                            <th class="main-body__nutrients--primary-cell" scope="row">Fett, totalt (g)</th>
+                            <td class="main-body__nutrients--data-cell">6,3</td>
+                            <td class="main-body__nutrients--data-cell">70,0</td>
+                            <td class="main-body__nutrients--data-cell">9,0</td>
                         </tr>
                         <tr>
-                            <th scope="row">Protein (g)</th>
-                            <td>5,5</td>
-                            <td>50,0</td>
-                            <td>11,1</td>
+                            <th class="main-body__nutrients--primary-cell" scope="row">Protein (g)</th>
+                            <td class="main-body__nutrients--data-cell">5,5</td>
+                            <td class="main-body__nutrients--data-cell">50,0</td>
+                            <td class="main-body__nutrients--data-cell">11,1</td>
                         </tr>
                         <tr>
-                            <th scope="row">Kolhydrater, tillgängliga (g)</th>
-                            <td>13,7</td>
-                            <td>260,0</td>
-                            <td>5,3</td>
+                            <th class="main-body__nutrients--primary-cell" scope="row">Kolhydrater, tillgängliga (g)</th>
+                            <td class="main-body__nutrients--data-cell">13,7</td>
+                            <td class="main-body__nutrients--data-cell">260,0</td>
+                            <td class="main-body__nutrients--data-cell">5,3</td>
                         </tr>
                         <tr>
-                            <th scope="row">Fibrer (g)</th>
-                            <td>0,5</td>
-                            <td>-</td>
-                            <td>-</td>
+                            <th class="main-body__nutrients--primary-cell" scope="row">Fibrer (g)</th>
+                            <td class="main-body__nutrients--data-cell">0,5</td>
+                            <td class="main-body__nutrients--data-cell">-</td>
+                            <td class="main-body__nutrients--data-cell">-</td>
                         </tr>
                         <tr>
-                            <th scope="row">Vatten (g)</th>
-                            <td>72,7</td>
-                            <td>-</td>
-                            <td>-</td>
+                            <th class="main-body__nutrients--primary-cell" scope="row">Vatten (g)</th>
+                            <td class="main-body__nutrients--data-cell">72,7</td>
+                            <td class="main-body__nutrients--data-cell">-</td>
+                            <td class="main-body__nutrients--data-cell">-</td>
                         </tr>
                     </tbody>
                 </table>
